samples/_failures_safe/1761519747_70664d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef921017.c: In function ‘main’:
./samples/SAFE/__tmp_ef921017.c:176:11: error: expected ‘;’ at end of input
  176 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_ef921017.c:176:5: error: expected declaration or statement at end of input
  176 |     printf
      |     ^~~~~~
